<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:weightSum="10"
    android:background="#fff0ffcd">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/query_title"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:textSize="@dimen/font_size_title"
        android:layout_weight="1" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical"
        android:weightSum="3"
        android:layout_weight="1">

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/text_workplace"
            android:id="@+id/textView2"
            android:layout_weight="1"
            android:textSize="@dimen/font_size_text"
            android:gravity="center" />

        <Spinner
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:id="@+id/workPlace_spn" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:weightSum="3"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/text_person_kind"
            android:id="@+id/textView3"
            android:layout_weight="1"
            android:textSize="@dimen/font_size_text"
            android:gravity="center" />

        <Spinner
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:id="@+id/personKind_spn" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:weightSum="4"
        android:gravity="center_vertical"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:text="@string/text_key_word"
            android:id="@+id/textView4"
            android:textSize="@dimen/font_size_text"
            android:gravity="center" />

        <EditText
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:id="@+id/keyWord_edt" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:weightSum="1"
        android:gravity="center"
        android:layout_gravity="center_horizontal">

        <Button
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_query"
            android:id="@+id/query_btn"
            android:textSize="@dimen/font_size_text"
            android:layout_weight="1" />

    </LinearLayout>

</LinearLayout>
