<!-- A DrawerLayout is intended to be used as the top-level content view using match_parent for both width and height to consume the full space available. -->
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/drawer_layout"
    android:layout_width="match_parent" android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- As the main content view, the view below consumes the entire
         space available using match_parent in both dimensions. -->
    <FrameLayout android:id="@+id/container" android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_gravity="center|top" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/appDesc"
                android:gravity="center_vertical"
                android:id="@+id/AppText_00"
                android:layout_alignParentRight="true" />


        </RelativeLayout>

        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="110dp"
            android:layout_gravity="center|top" >


            <ImageView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/memberImage_01"
                android:layout_alignParentLeft="true"
                android:src="@drawable/meameayang"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/mem_desc_01"
                android:id="@+id/memberText_01"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@+id/memberImage_01" />

        </RelativeLayout>


        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="205dp"
            android:layout_gravity="center|top" >

            <ImageView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/memberImage_02"
                android:layout_alignParentLeft="true"
                android:src="@drawable/sstone"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/mem_desc_02"
                android:id="@+id/memberText_02"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@+id/memberImage_02" />

        </RelativeLayout>


        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="300dp"
            android:layout_gravity="center|top" >

            <ImageView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/memberImage_03"
                android:layout_alignParentLeft="true"
                android:src="@drawable/eentrance"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/mem_desc_03"
                android:id="@+id/memberText_03"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@+id/memberImage_03" />


        </RelativeLayout>

        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="395dp"
            android:layout_gravity="center|top" >

            <ImageView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/memberImage_04"
                android:layout_alignParentLeft="true"
                android:src="@drawable/aallen"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/mem_desc_04"
                android:id="@+id/memberText_04"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@+id/memberImage_04" />


        </RelativeLayout>

    </FrameLayout>

    <!-- android:layout_gravity="start" tells DrawerLayout to treat
         this as a sliding drawer on the left side for left-to-right
         languages and on the right side for right-to-left languages.
         If you're not building against API 17 or higher, use
         android:layout_gravity="left" instead. -->
    <!-- The drawer is given a fixed width in dp and extends the full height of
         the container. -->

</android.support.v4.widget.DrawerLayout>
